Добавлен EXE, иконка и ярлык на рабочем столе